# ESIR3

./: .gitignore
ANA/: Notes_CM.md
ANA/TP_SI_OpenGL/TP/: Doxyfile.dox  configure
ANA/TP_SI_OpenGL/dependencies-2017_x64/: copyDll.bat  copyDllDebug.bat
ANA/TP_SI_OpenGL/documentation/: Application et dépendances GL3.docx
ANA/tp1_resources/: world_simple.3ds
ANA/tp2_resources/html/: _agent_8h.html  _agent_8h_source.html  _application_8cpp.html  _application_8h.html  _base_8h.html  (+1919 more)
HPC/: Notes.md  README.md  bits.c  bits.h  bits_cuda_simpler.cu  bits_test.c  gamelifegpu.cu  project.cu  project_normal.cu
IMED/: Notes_IMED2.md
IMED/Tracto/CppTracto/: CMakeLists.txt  README.md  TensorField.h  filamentMaker.h  main.cpp  renderer.cpp  renderer.h
IMED/Tracto/CppTracto/Matlab-files/: gradients.txt
IMED/Tracto/CppTracto/Matlab-files/DTI_Estimation/: DEMO_DTI_Estimation.m
IMED/Tracto/CppTracto/Matlab-files/SimulateDWMRI/: DEMO_SimulateDWMRI_voxel.m
Management/FROGER/: CM2_09_12_2024.md  Les relations individuelles en droit privé du travail-ESIR-V231127_IGR_279157.ppt  TD 1-241206.ppt
VROB/: VROB2_CM1.md  eigenfaces_etudiants.ipynb
VROB/TP1/: CMakeLists.txt  main.cpp
VROB/TP1/includes/: Calibrator.h
VROB/TP1/resources/videos/: livre2.mov
VROB/TP1/resources/videos/calib/: calib_video1.mov  calib_video2.mov  calib_video3.mov
VROB/tp-visual-servoing/: ExponentialMap.py  HomogeneousMatrix.py  Math.py  PlotIbvs.py  PlotPbvs.py  Point.py  README.mkd  RotationMatrix.py  ThetaUVector.py  tp4-ibvs-four-points.py  tp4-ibvs-one-point.py  tp4-pbvs-four-points.py
(+1224 files in other folders)
